--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -4,3 +4,13 @@
     top: 0;
     z-index: 99
 }
+
+.fh5co-form {
+    padding: 30px;
+    margin-top: 4em;
+    -webkit-box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
+    background: #ffffff;
+  }
