--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -14,3 +14,56 @@
     box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
     background: #ffffff;
   }
+
+.main-wrapper {
+    position: relative;
+    left: 0;
+    -webkit-transition: all 400ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    -moz-transition: all 400ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    -ms-transition: all 400ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    -o-transition: all 400ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    transition: all 400ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+
+.page-title {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    display: block;
+    background-image: url(~assets/img/banner.png);
+    background-size: cover;
+    background-position: center top;
+}
+
+.page-title .container {
+    height: 600px;
+}
+
+.title-holder {
+    position: relative;
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
+.title-text {
+    display: table-cell;
+    height: 100%;
+    vertical-align: middle;
+}
+  
+.title-text h1 {
+    margin-bottom: 10px;
+    font-size: 50px;
+    font-weight: normal;
+}
+
+.subheading {
+    font-size: 17px;
+    line-height: 26px;
+    margin-bottom: 0;
+    display: inline-block;
+    letter-spacing: normal;
+}
+
