--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1,12 +1,12 @@
 .fh5co-form {
     padding: 30px;
-    margin-top: 4em;
+    margin-top: 10em;
     -webkit-box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
     -o-box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
     box-shadow: -4px 7px 46px 2px rgba(0, 0, 0, 0.1);
     background: #ffffff;
-  }
+}
 
 .main-wrapper {
     position: relative;
@@ -25,7 +25,7 @@
     overflow: hidden;
     background-repeat: no-repeat;
     display: block;
-    background-image: url(~assets/img/banner.png);
+    background-image: url(/img/banner.png);
     background-size: cover;
     background-position: center top;
 }
